--- a/ProjetFinalApplication/app/src/main/AndroidManifest.xml
+++ b/ProjetFinalApplication/app/src/main/AndroidManifest.xml
@@ -2,16 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.jaimys.scabits">
 
-    <!--
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    -->
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/logo"
+        android:icon="@mipmap/ic_new_launcher_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/logo"
+        android:roundIcon="@mipmap/ic_new_launcher_round"
         android:largeHeap="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
