--- a/ProjetFinalApplication/app/src/main/AndroidManifest.xml
+++ b/ProjetFinalApplication/app/src/main/AndroidManifest.xml
@@ -2,45 +2,47 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="fr.jaimys.scabits">
 
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_new_launcher_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_new_launcher_round"
         android:largeHeap="true"
+        android:roundIcon="@mipmap/ic_new_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SignupActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            /> <!-- SignupActivity -->
-        <activity android:name=".NotificationActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            />
-        <activity android:name=".HistoricActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            />
-        <activity android:name=".AccountActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            />
-        <activity android:name=".StartActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            />
-        <activity android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            ><!-- StartActivity -->
+        <activity
+            android:name=".SignupActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" /> <!-- SignupActivity -->
+        <activity
+            android:name=".NotificationActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".HistoricActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".AccountActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".StartActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".GhostActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"> <!-- StartActivity -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
-            />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
     </application>
 
 </manifest>
