--- a/ProjetFinalApplication/app/src/main/AndroidManifest.xml
+++ b/ProjetFinalApplication/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SettingsActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+        <activity
+            android:name=".PasswordActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+        <activity
             android:name=".SignupActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" /> <!-- SignupActivity -->
         <activity
