--- a/ProjetFinalApplication/app/src/main/AndroidManifest.xml
+++ b/ProjetFinalApplication/app/src/main/AndroidManifest.xml
@@ -14,8 +14,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".SettingsActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
+            android:name=".PasswordActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
+        <activity
             android:name=".SignupActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" /> <!-- SignupActivity -->
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
         <activity
             android:name=".NotificationActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar" />
